<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:padding="5dp"
	android:id="@+id/pan_list">

	<ImageView
		android:id="@+id/img_icon_main"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:layout_margin="10dp"
		android:contentDescription="@string/image_icon" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:weightSum="10"
		android:layout_margin="5dp"
		android:orientation="horizontal"
		android:gravity="center_vertical">

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="9"
			android:gravity="center_vertical">

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical">

				<ImageView
					android:visibility="gone"
					android:layout_width="25dp"
					android:layout_height="25dp"
					android:background="@drawable/girl"
					android:contentDescription="@string/image_icon" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/mobile_communication"
					android:id="@+id/txt_subname_main"
					android:textColor="#414141"/>

			</LinearLayout>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical">

				<ImageView
					android:visibility="gone"
					android:layout_width="25dp"
					android:layout_height="25dp"
					android:background="@drawable/ic_hat"
					android:contentDescription="@string/image_icon" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/rakesh_c_r"
					android:textColor="#515151"
					android:id="@+id/txt_teachname_main"/>

			</LinearLayout>

		</LinearLayout>

		<TextView
			android:id="@+id/txt_hide"
			android:visibility="gone"
			android:layout_width="0dp"
			android:layout_height="35dp"
			android:layout_weight="1"/>

	</LinearLayout>

</LinearLayout>

